@@ -9,6 +9,7 @@ RECENT CHANGES
 * sys:info command: Added row count for main entities (by Christian Münch)
 * #315 sys:setup:run on enterprise requires admin session. (by Thorsten Essig and Christian Münch)
 * #367 Exclude sessions from @stripped (and therefore @development) (by Aaron Brady)
+* sys:setup returns exit status code "1" if setup fails (by Christian Münch)
 
 ======
 1.90.0
